--- a/css/board/board_add_task_overlay.css
+++ b/css/board/board_add_task_overlay.css
@@ -17,7 +17,6 @@
   overflow-y: auto;
   transition: all 200ms ease-in-out;
 }
-
 .board-at-section.card-visible {
   transform: translateY(0);
   transform: translateX(0);
@@ -41,7 +40,6 @@
 .close-edit-at svg path {
   fill: var(--mockup-color);
 }
-
 .content-bottom-container-board {
   display: flex;
   align-items: center;
@@ -56,7 +54,6 @@
   transition: all 200ms ease-in-out;
   z-index: 101;
 }
-
 @media (min-width: 761px) {
   .required-msg {
     font-size: 18px;
@@ -110,7 +107,6 @@
     gap: 16px !important;
   }
 }
-
 @media (min-width: 1341px) {
   .at-prio-img {
     justify-content: center !important;
@@ -122,9 +118,19 @@
   .board-at-section {
     transform: translateY(0);
     transform: translateX(250%);
+    max-width: 1100px;
+    max-height: 900px;
   }
   .board-at-wrapper {
     max-width: 1920px;
+  }
+  .content-container-board {
+    margin-top: 48px;
+    display: flex;
+    gap: 32px;
+    max-width: 1920px;
+    height: calc(100vh - 390px);
+    padding: 4px;
   }
 }
 @media (min-width: 2500px) {
@@ -152,7 +158,7 @@
     bottom: 0px;
     left: 0px;
     top: 0;
-    background: transparent;
+    background: #2f2f2f8d;
   }
   .board-at-section {
     margin-inline: 8px;
@@ -172,7 +178,6 @@
   .at-prio-img {
     padding-inline: 8px;
   }
-
   .board-at-wrapper {
     height: 100vh;
     display: flex;
@@ -188,7 +193,6 @@
     fill: white;
   }
 }
-
 @media (max-width: 481px) {
   .board-at-headline {
     font-size: 43px;
@@ -201,13 +205,11 @@
     max-height: calc(100vh - 300px);
   }
 }
-
 @media (max-width: 466px) {
   .content-bottom-container-board {
     height: 50px;
   }
 }
-
 @media (max-width: 396px) {
   .at-prio-img-red,
   .at-prio-img-yellow,
@@ -215,19 +217,16 @@
     width: 80px !important;
   }
 }
-
 @media (max-width: 377px) {
   .required-msg {
     font-size: 14px !important;
   }
 }
-
 @media (max-width: 356px) {
   .required-msg {
     font-size: 12px !important;
   }
 }
-
 @media (max-width: 343px) {
   .board-at-section {
     margin-inline: 0px;
@@ -235,13 +234,11 @@
     max-width: none;
   }
 }
-
 @media (min-width: 761px) and (max-height: 700px) {
   .board-at-section {
     height: calc(100vh - 24px);
   }
 }
-
 @media (min-width: 761px) and (max-height: 600px) {
   .content-container-board {
     max-height: calc(100vh - 180px);
@@ -256,7 +253,6 @@
     top: 32px;
   }
 }
-
 @media (min-width: 761px) and (max-height: 500px) {
   .board-at-section {
     border-radius: 0;
@@ -266,7 +262,6 @@
     margin: 0;
   }
 }
-
 @media (min-width: 980px) and (max-height: 700px) {
   .board-at-section {
     margin-inline: 64px;
@@ -275,6 +270,9 @@
   }
 }
 @media (min-width: 1341px) and (max-height: 700px) {
+  .board-at-section {
+    max-width: 1100px;
+  }
   .content-container-board {
     height: calc(100vh - 255px);
     margin-top: 0px;
@@ -285,15 +283,12 @@
     margin-bottom: 0;
   }
 }
-
 @media (min-width: 1341px) and (max-height: 500px) {
   .board-at-section {
     height: 100vh;
     margin-inline: 0px;
     border-radius: 20px;
     padding: 24px;
-    max-width: 600px;
-    max-height: none;
   }
   .content-container-board {
     margin-top: 24px;
@@ -320,7 +315,6 @@
     font-size: 38px;
   }
 }
-
 @media (max-width: 333px) and (max-height: 600px) {
   .board-at-section {
     position: relative;
