--- a/css/summary/summary_media.css
+++ b/css/summary/summary_media.css
@@ -123,7 +123,6 @@
   .top-hover-container {
     height: 166px;
   }
-
   .middle-section:hover,
   .middle-section:hover *,
   .middle-section:hover .summary-change-content span,
@@ -192,13 +191,11 @@
     max-height: 778px;
   }
 }
-
 @media (min-width: 900px) {
   .separator-desktop {
     margin-inline: 30px;
   }
 }
-
 @media (min-width: 1000px) {
   .summary-column {
     gap: 16px;
@@ -235,7 +232,6 @@
     width: 184px;
   }
 }
-
 @media (min-width: 1341px) {
   .summary-overview {
     align-items: center;
@@ -284,14 +280,12 @@
     justify-content: start;
   }
 }
-
 @media (max-width: 950px) {
   .tooltip-summary .summary-tooltiptext {
     border-radius: 20px 20px 20px 0px;
     left: 400%;
   }
 }
-
 @media (max-width: 760px) {
   .summary-greeting-overlay {
     z-index: 989;
@@ -428,7 +422,6 @@
     width: 145.33px;
   }
 }
-
 @media (max-width: 560px) {
   .tasks-info,
   .summary-change-content {
@@ -497,7 +490,6 @@
     width: 193px;
   }
 }
-
 @media (max-width: 466px) {
   .summary-overview {
     gap: 24px;
@@ -571,7 +563,6 @@
     font-size: 50px;
   }
 }
-
 @media (max-width: 328px) {
   .middle-hover-container,
   .middle-section {
@@ -585,21 +576,22 @@
     gap: 64px;
   }
 }
-
 @media (min-width: 761px) and (max-height: 919px) {
   .summary-wrapper {
     margin: 108px 0 0 calc(232px);
   }
   .summary-column {
     display: block;
-    height: calc(100vh - 190px);
+    height: calc(100vh - 210px);
     margin-bottom: 0;
   }
   .summary-overview {
     padding-bottom: 16px;
   }
+  .greetings-content {
+    margin-top: 8px;
+  }
 }
-
 @media (min-width: 853px) and (max-height: 900px) {
   .summary-column {
     box-shadow: none;
@@ -607,7 +599,6 @@
     background: transparent;
   }
 }
-
 @media (min-width: 1341px) and (max-height: 919px) {
   .summary-wrapper {
     margin: 100px 0 0 calc(232px + 56px);
@@ -624,7 +615,6 @@
     display: block;
   }
 }
-
 @media (max-width: 760px) and (max-height: 919px) {
   .summary-wrapper {
     margin: 100px 16px 0 16px;
@@ -652,7 +642,6 @@
     gap: 16px;
   }
 }
-
 @media (max-width: 760px) and (max-height: 550px) {
   .summary-column {
     height: calc(100vh - 280px);
@@ -773,7 +762,6 @@
     width: auto;
   }
 }
-
 @media (max-width: 760px) and (max-height: 454px) {
   .greetings-content {
     font-size: 38px;
@@ -782,7 +770,6 @@
     font-size: 54px;
   }
 }
-
 @media (max-width: 760px) and (max-height: 360px) {
   .greetings-content {
     margin-top: 16px;
