fixing click eventlistener bug when edit substaks not finished

--- a/css/add_task/add_task.css
+++ b/css/add_task/add_task.css
@@ -278,7 +278,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   content: "\2022";
   margin-right: 10px;
 }
-.subtask-svg {
+.subtask-svg,
+.subtask-svg-hidden {
   display: flex;
   align-items: center;
   margin-left: auto;
