--- a/css/summary/summary_media.css
+++ b/css/summary/summary_media.css
@@ -644,17 +644,27 @@
 }
 @media (max-width: 760px) and (max-height: 550px) {
   .summary-column {
-    height: calc(100vh - 280px);
+    height: calc(100vh - 180px);
+    padding-block: 12px;
+  }
+  .summary-content {
+    gap: 0;
+  }
+  .header {
+    display: none;
+  }
+  .summary-wrapper {
+    margin: 16px 16px 0 16px;
   }
   .summary-overview {
     padding-bottom: 8px;
   }
   .summary-title h1 {
-    font-size: 43px;
+    font-size: 35px;
   }
   .tasks-info,
   .summary-change-content {
-    font-size: 36px;
+    font-size: 24px;
   }
   .summary-title span,
   .tasks-info span:last-child,
@@ -689,6 +699,18 @@
   }
   .top {
     width: 235px;
+    height: 100px;
+  }
+  .middle-section {
+    padding: 12px;
+    height: 100px;
+  }
+  .tasks-info,
+  .top-hover-container,
+  .middle-hover-container,
+  .bottom-section,
+  .bottom-hover-container {
+    height: 100px;
   }
 }
 @media (max-width: 560px) and (max-height: 550px) {
